--- a/EKS/app3/index.html
+++ b/EKS/app3/index.html
@@ -6,6 +6,6 @@
     <title>Private ALB Web App</title>
 </head>
 <body>
-    <h1>Hello from EKS with Private ALB!</h1>
+    <h1>Hello from EKS with Application 03</h1>
 </body>
 </html>
