--- a/EKS/app1/index.html
+++ b/EKS/app1/index.html
@@ -6,6 +6,6 @@
     <title>Private ALB Web App</title>
 </head>
 <body>
-    <h1>Hello from EKS with a new Application 01</h1>
+    <h1>Hello from EKS with Application 01</h1>
 </body>
 </html>
